@@ -13,6 +13,7 @@ Misc:
  - GBA: Slightly optimize GBAProcessEvents
  - Qt: Add preset for DualShock 4
  - SDL: Remove default gamepad mappings
+ - Qt: Update 360 input profile on OS X to reflect newer drivers
 
 0.4.0: (2016-02-02)
 Features:
